--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>sdb-schedule UI</title>
 <!--
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" type="text/css" />
 -->
@@ -16,10 +16,8 @@ text-overflow:ellipsis;
 -o-text-overflow:ellipsis;}
 
 </style>
-
- 
-  </head>
-  <body>
+</head>
+<body>
 <div style="margin:5px;">
 <button class="btn" onclick="onCfgSave();" ><i class="icon-time"></i> Cfg Setting</button>
 <button class="btn btn-primary" onclick="onJobAdd();" ><i class="icon-time"></i> Add Schedule Job</button>
