--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ function onJobConf( jobName )
 
 			$("#idTxtHeadCfg").text( jobName + " config edit" );
 			$("#idCurCfgMainID").val( jobName );
-			$("#idTextJobCfg").text( data.cfg );
+			$("#idTextJobCfg").val( data.cfg );
       $("#idModelJobCfg").modal('show');
   });
 }
