using ioredis replace node-redis

--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@ function get_jobs_ajax()
 
       g_Con.save_cfg( cfg );
       $("#idModelCfg").modal('hide');
+      layer.msg( "Need reboot programe!!");
   }
 
 
